@@ -1,3 +1,8 @@
+2005-09-09  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* win/winvideo.cpp: fixed bug #4992 - CreateClassEnumerator
+	returns a success code on failure, so check the pointer.
+
 2004-05-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* doc/tkvideo.man: NEW: added initial doc file.
